implemented add to cart functionality, updated the advertisement slider section, displayed toast for cetain operations, added some necessary resouces, made some style and functionality related changes and corrections

--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
   <!-- aos link -->
   <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 
+  <!-- font awsome -->
+  <script src="https://kit.fontawesome.com/85eb643506.js" crossorigin="anonymous"></script>
+
   <title>Vite + React</title>
 </head>
 
